codepkg/objects/Application_Extension__c.object
<CustomObject>
    <fields>
        <fullName>Planning_related_activity_deliverables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Examples of planning-related activities that are eligible for funding under HMGP    
• Update the mitigation strategy to reflect current mitigation and/or disaster recovery goals
• Update or enhance sections of the current FEMA-approved hazard mitigation plan
• Develop and deliver planning related training
• Provide technical assistance to subrecipients on mitigation planning
• Evaluate the adoption and/or implementation of ordinances  increase resilience
• Integrate information from current mitig</inlineHelpText>
        <label>Planning related activity, deliverables</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Calculated_Benefit_Approach__c</fullName>
        <label>Pre-Calculated Benefit Approach</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisitions and Elevations in the SFHA</fullName>
                </value>
                <value>
                    <fullName>Mitigation Reconstruction in the SFHA</fullName>
                </value>
                <value>
                    <fullName>Residential Hurricane Wind Retrofits</fullName>
                </value>
                <value>
                    <fullName>Non-Residential Hurricane Wind Retrofits</fullName>
                </value>
                <value>
                    <fullName>Individual Tornado Safe Rooms</fullName>
                </value>
                <value>
                    <fullName>Post Wildfire</fullName>
                </value>
                <value>
                    <fullName>Post Wildfire Stabilization/Reforestation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Event_or_Current_Market_Value__c</fullName>
        <inlineHelpText>Pre-event market value is defined as the market value of the property immediately before the relevant event affecting the property. Pre-event valuation can only be used if a disaster has taken place. The relevant event for assistance is the major disaster under which funds are available. A property owner who is not a National of the United States or a qualified alien is not eligible for a pre-event market value determination of property value. The property value must be based on the current market value.</inlineHelpText>
        <label>Pre-Event or Current Market Value?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Event</fullName>
                </value>
                <value>
                    <fullName>Current Market Values</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_calc_for_all_elevated_structures__c</fullName>
        <label>Pre-calc for all elevated structures?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_calculated_benefits_used__c</fullName>
        <inlineHelpText>Precalculated benefit can be used for structures  costing $175,000 or less and  located in the 100-year floodplain. No BCA is required. 


Reference: 2015 HMA Guidance, I.7</inlineHelpText>
        <label>Pre-calculated benefits used?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previ_s_deficiencies_corrective_action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Previ&apos;s deficiencies &amp; corrective action</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Building_Facility_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Building/Facility/Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type_Formula__c</fullName>
        <description>This formula field is used in application extension trigger</description>
        <formula>TEXT(Application__r.Project_Type__c)</formula>
        <label>Project Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Structure elevation activities generally involve physically raising an existing structure to an elevation at  BFE or higher if required by FEMA or local ordinance. Structure elevation may be achieved through  variety  methods, including elevating on continuous foundation walls; elevating on open foundations, such as piles, piers, posts, or columns; and elevating on fill.

Reference: 2015 HMA Addendum Guidance, E.1

Dry Floodproofing of Historic Residential Structures is permissible only when
other t</inlineHelpText>
        <label>Project details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_within_or_modifies_floodplain__c</fullName>
        <inlineHelpText>To download Flood Insurance Rate Map, go to the FEMA Flood Map Service Center https://msc.fema.gov/portal/search and click on the button for “Map Image – Download FIRM Panel”</inlineHelpText>
        <label>Project within or modifies floodplain?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prpty_Owner_Appeal_Reconsider_re_value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>An appeal or reconsideration process must be documented and followed for property owners who dispute the purchase offer property valuation. For example, if a homeowner if not happy with the appraisal value of their property, they may seek their own appraisal, and the original appraisal and homeowner appraisal will be averaged.

Reference: 2015 HMA Guidance Addendum, A.4.3</inlineHelpText>
        <label>Prpty Owner Appeal/Reconsider re value</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Engagement_process_quantities__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reference: 44 CFR 201.6 (B) (1-2) &amp;                        2015 HMA Guidance, Part IV H.3.1</inlineHelpText>
        <label>Public Engagement process &amp; quantities</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_planning_activities_paid_for__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Related planning activities paid for?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Relocation_outside_SFHA_or_other_hzrds__c</fullName>
        <inlineHelpText>Reference: 2015 HMA Guidance Addendum, A.2</inlineHelpText>
        <label>Relocation outside SFHA or other hzrds</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_elements_included_as_in_guidanc__c</fullName>
        <label>Required elements included as in guidanc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requires_Sec10_of_FHA_or_CWA_404_permit__c</fullName>
        <inlineHelpText>For sites with wetlands, to download NWI Map, go to the USFWS wetlands mapper https://www.fws.gov/wetlands/data/Mapper.html, click on the wetlands mapper link, click on “Find Location” and search by address Click “Print” to download the NWI map.</inlineHelpText>
        <label>Requires Sec10 of FHA or CWA 404 permit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_in_FEMA_approved_adopted_LHMP__c</fullName>
        <inlineHelpText>Reference: 44 CFR Section 201.6 (local), or 201.7 (tribal)</inlineHelpText>
        <label>Result in FEMA approved &amp; adopted LHMP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_assessment_process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk assessment process</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S_P_design_code_performance_level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>S/P design code performance level</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seed_type_and_brand_and_methods__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Seed type and brand and methods</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Seismic_design_code_performance_level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Seismic design code performance level</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Select_Project_Type__c</fullName>
        <inlineHelpText>physically raising a structure, choose elevation. If applying techniques to seal a structure or elevation certain components, choose floodproofing. 

Dry Floodproofing can only be applied to:  Historical residential structures only when other techniques that would mitigate to the Base Flood Elevation (BFE) would cause the structure to lose its status as a Historical Structure. 

Dry floodproofing on non-residential structures include: watertight closures, walls
 floors that are adequately reinforced</inlineHelpText>
        <label>Select Project Type:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elevation</fullName>
                </value>
                <value>
                    <fullName>Floodproofing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_applicable_project_type_s__c</fullName>
        <label>Select applicable project type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ignition Resistant Construction</fullName>
                </value>
                <value>
                    <fullName>Defensible Space</fullName>
                </value>
                <value>
                    <fullName>Hazardous Fuels Reduction</fullName>
                </value>
                <value>
                    <fullName>Post-Wildfire Revegetation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Future_Maintenance_Funds__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source of Future Maintenance Funds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_OMP_to_be_provided_at_close__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Statement OMP to be provided at close?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Structures_occupied_by_tenants__c</fullName>
        <inlineHelpText>The tenant occupied structures should be identified on the property(ies) list.

Reference: 2015 HMA Guidance Addendum, A.6.10</inlineHelpText>
        <label>Structures occupied by tenants?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Application_Type_f__c</fullName>
        <formula>TEXT(Application__r.Application_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-Application Type(f)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Acreage_treated__c</fullName>
        <description>What is the total combined acreage for all treatment areas included in the project area?</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Acreage treated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Benefits_in_the_BCA__c</fullName>
        <label>Total Benefits in the BCA</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_in_the_BCA__c</fullName>
        <label>Total Cost in the BCA</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Management_Cost_Requested__c</fullName>
        <label>Total Management Cost Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <label>Total Project Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treatment_method_type_of_equipement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Treatment method &amp; type of equipement</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Aquisition__c</fullName>
        <inlineHelpText>If the acquired structure will be destroyed, select demolition

If the acquired structure will be moved to a separate parcel outside the hazard area, select relocation</inlineHelpText>
        <label>Type of Aquisition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquistion-demolition</fullName>
                </value>
                <value>
                    <fullName>Acquisition-relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_Current_Version_of_FEMA_BCA_Used__c</fullName>
        <label>Was the Current Version of FEMA BCA Used</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_type_will_be_developed__c</fullName>
        <inlineHelpText>The subapplicant will not be eligible to receive project grant funds unless FEMA approves the plan to be in compliance with the Federal hazard mitigation planning standards identified in 44 CFR 201.6.  The application must state that the objective is to create a plan that is compliant with these regulations.  In addition, the timeline for the grant should include at least  45 days for FEMA to review and approve the plan.



Reference: 44 CFR 201.6</inlineHelpText>
        <label>What type will be developed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New single plan</fullName>
                </value>
                <value>
                    <fullName>Update single plan</fullName>
                </value>
                <value>
                    <fullName>New multi jurisdictional plan</fullName>
                </value>
                <value>
                    <fullName>Update multi jurisdictional plan</fullName>
                </value>
                <value>
                    <fullName>Planning-related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who_implement_financial_responsibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Who implement, financial responsibility</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Who_implement_who_financial_authority__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>example 
• will the subapplicant be performing the work via direct contract or government staff? 
• Will building owners or other parties be contracting the work and filing with the subapplicant for reimbursement? Or will there be a combination of activities and responsibilities? How will the subapplicant be involved in design and monitoring of project activities? 
• Will the subapplicant be approving individual structural elevation plans and contract bids that the private owners will implement? 
• W</inlineHelpText>
        <label>Who implement, who financial authority?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Why_this_Mitigation_Recon_activity__c</fullName>
        <description>Describe why Mitigation Reconstruction was selected as the mitigation strategy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Why this Mitigation Recon activity?</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Will_impact_Minority_or_Low_Income_Pop__c</fullName>
        <inlineHelpText>To determine if the project is located in a high percent minority population, use the Environmental Justice Screening Tool. The tool will indicate if the project site is located in a high percent minority population area and will have possible detrimental environmental impacts, The U.S. Environmental Protection Agency (USEPA) Technical Guidance for Assessing Environmental Justice in Regulatory Analysis should be used to perform an analysis of environmental justice. This Guidance is provided on the USEPA w</inlineHelpText>
        <label>Will impact Minority or Low Income Pop?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>natr_l_hzrd_plnng_prcss_for_other_plans__c</fullName>
        <label>natr&apos;l hzrd plnng prcss for other plans?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>structures_to_receive_defensible_space__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label># structures to receive defensible space</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Application Extension</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>Application Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Extensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>